# gravitas

./: .gitignore  CMakeLists.txt  main.c
src/libgravitas/: color.c  color.h  particle.c  particle.h  world.c  world.h
